--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,14 +1,14 @@
 {
   "builds": [
     {
-      "src": "bin/www.js",
-      "use": "@now/node"
+      "src": "*.js",
+      "use": "@vercel/node"
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "bin/www.js"
+      "dest": "/"
     }
   ]
 }
